Adjust positioning of fixed messages so they're visible above everything else

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -88,7 +88,7 @@ ol.results {
 .vote-summary {
     position: fixed;
     right: 0;
-    bottom: 0;
+    bottom: 20%;
 }
 
 ul.voter-check {
